--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',    sans-serif;
+  margin: 50px 0 0 0;
+}
+
+p {
+  font-size: .5em;
+  line-height: 1.0em;
+  padding-left: 5.0em;
+  padding-right: 5.0em}
+
+h1.page-title {
+  margin-top: 10px;
+}
+
+h2 {
+  font-size: .8em;
+  line-height: 1.0em;
+  padding-top: 2.0em;
+}
+
+ul {
+  list-style: none;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',    monospace;
+}
+
+.topbar {
+  background-color: #000;
+  height: 100px;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
 }
